# ICP-Energy

./: CMakeLists.txt
data/: depth_frame.csv  depth_frame_eval.csv
src/: main.cpp  model.cpp  model.h  optimization_engine.cpp  optimization_engine.h  pose_estimator6d.cpp  pose_estimator6d.h
